--- a/index.html
+++ b/index.html
@@ -72,17 +72,11 @@ body {
     <!-- Begin page content -->
     <div class="container">
         <div class="page-header">
-            <h1 class="text-center">Challenge 3.11 - Random Messages</h1>
+            <h1 class="text-center">انت الان امام اللجنة من فضلك اسحب سؤال</h1>
 
-            <p>Use jQuery to display a random message to the user</p>
+            <p>سمي قبل ما تسحب</p>
 
-                <ul>
-                    <li>Start by creating an array of 10 random messages (strings).</li>
-                    <li>On page load, the page should have the message "Hello!"</li>
-                    <li>Beneath that, add a button that says "New Message".</li>
-                    <li>When the button is clicked, randomly select a new message to display on the screen (this will replace the old message).</li>
-                    <li>The button should be able to be clicked as many times as you want - every click will change the message.</li>
-                </ul>
+               <img src="https://d.top4top.io/p_26240menw1.jpg" >
             
         </div>
         <div class="well">
