--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@ body {
     </div>
     <!-- End Container -->
 
-    <footer class="footer">
+   <!--  <footer class="footer">
         <div class="container">
             <p class="text-muted">Challenge 3.11 - Random Messages</p>
         </div>
-    </footer>
+    </footer> -->
     <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-2c7831bb44f98c1391d6a4ffda0e1fd302503391ca806e7fcc7b9b87197aec26.js"></script>
 
   <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
