--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ body {
         <!-- End Well -->
 
         <div class="generator text-center">
-            <button class="btn btn-warning" type="button" name="button" id="generateNew">Generate New Sentence!</button>
+            <button class="btn btn-warning" type="button" name="button" id="generateNew">اسحب سوال</button>
         </div>
 
     </div>
