--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ body {
 
          <!--   <p>سمي قبل ما تسحب</p> -->
 
-               <img src="https://d.top4top.io/p_26240menw1.jpg" >
+               <img src="https://d.top4top.io/p_26240menw1.jpg" style="max-width: 100%;height: auto;">
             
         </div>
         <div class="well">
