--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@ $(document.body).click(function () {
   "ما المقصود بالغاء التشريع؟",
   "ما المقصود بالقواعد الامرة والقواعد المكملة؟",
   "ما هو قسم الفتوي؟",
-  "ما المقصود بالاختصاص الزماني والاختصاص الزماني",
-  "ما المقصود بمبدأ سمو الدستور",
+  "ما المقصود بالاختصاص الزماني والاختصاص المكاني ؟",
+  "ما المقصود بمبدأ سمو الدستور؟",
   "ما هي شروط التعيين في الوظيفة العامة؟",
   "ما هي حقوق الموظف؟",
   "ما هي شروط قبول دعوي الاغاء؟",
