--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ $(document.body).click(function () {
      "ما هي اركان المسئوليه التقصيريه؟",
      "ما انواع دعاوي الحيازه ؟",
      "ما هي اركان العقد المدني؟",
-     "من الذى يطلب تفسير القوانين والقرارات بقوانين ؟؟",
+     "من الذى يطلب تفسير القوانين والقرارات بقوانين ؟",
   "ما هو ميعاد الطعن على الجنح والمخالفات؟"],
 
 
