--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ body {
     <!-- Begin page content -->
     <div class="container">
         <div class="page-header">
-            <h1 class="text-center">انت الان امام اللجنة من فضلك اسحب سؤال</h1>
+            <h1 class="text-center">عندما تكون مستعد اضغط علي جاهز للسوال</h1>
 
          <!--   <p>سمي قبل ما تسحب</p> -->
 
