--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ body {
 
          <!--   <p>سمي قبل ما تسحب</p> -->
 
-               <img src="http://sla.gov.eg/images/Imeg_Slider/003.jpg" style="max-width: 100%;height: auto;">
+               <img src="https://pasteboard.co/qBJGa3QB4PA9.png" style="max-width: 100%;height: auto;">
             
         </div>
         <div class="well">
