--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 
   <meta charset="UTF-8">
   
-  <link rel="apple-touch-icon" type="image/png" href="http://sla.gov.eg/images/favicon.ico" />
+  <link rel="apple-touch-icon" type="image/png" href="https://pasteboard.co/sMQDPSsOBeRf.png" />
 
   <meta name="apple-mobile-web-app-title" content="CodePen">
 
-  <link rel="shortcut icon" type="image/x-icon" href="http://sla.gov.eg/images/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="https://pasteboard.co/sMQDPSsOBeRf.png" />
 
-  <link rel="mask-icon" type="image/x-icon" href="http://sla.gov.eg/images/favicon.ico" color="#111" />
+  <link rel="mask-icon" type="image/x-icon" href="https://pasteboard.co/sMQDPSsOBeRf.png" color="#111" />
 
 
   
