--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 
   <meta charset="UTF-8">
   
-  <link rel="apple-touch-icon" type="image/png" href="https://pasteboard.co/sMQDPSsOBeRf.png" />
+  <link rel="apple-touch-icon" type="image/png" href="https://i.imgur.com/hJUr9Mv.png" />
 
   <meta name="apple-mobile-web-app-title" content="CodePen">
 
-  <link rel="shortcut icon" type="image/x-icon" href="https://pasteboard.co/sMQDPSsOBeRf.png" />
+  <link rel="shortcut icon" type="image/x-icon" href="https://i.imgur.com/hJUr9Mv.png" />
 
-  <link rel="mask-icon" type="image/x-icon" href="https://pasteboard.co/sMQDPSsOBeRf.png" color="#111" />
+  <link rel="mask-icon" type="image/x-icon" href="https://i.imgur.com/hJUr9Mv.png" color="#111" />
 
 
   
@@ -76,7 +76,7 @@ body {
 
          <!--   <p>سمي قبل ما تسحب</p> -->
 
-               <img src="https://pasteboard.co/qBJGa3QB4PA9.png" style="max-width: 100%;height: auto;">
+               <img src="https://i.imgur.com/A6rnzYx.png" style="max-width: 100%;height: auto;">
             
         </div>
         <div class="well">
